[package]
name = "merkle"
version = "0.1.0"
authors = [
  "Ivan Prisyazhnyy <john.koepi@gmail.com>"
]

description   = "Merkle tree implementation with support for generation of inclusion proofs."
license       = "BSD-3-Clause"
documentation = "https://sitano.github.io/merkle/merkle/index.html"
homepage      = "https://github.com/sitano/merkle"
repository    = "https://github.com/sitano/merkle"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]

[dependencies]

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"
