[package]
name = "merkle_light"
version = "0.1.0"
authors = [
  "Ivan Prisyazhnyy <john.koepi@gmail.com>"
]

description   = "Light merkle tree implementation with SPV support and dependency agnostic."
license       = "BSD-3-Clause"
homepage      = "https://github.com/sitano/merkle_light"
repository    = "https://github.com/sitano/merkle_light"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]

[dependencies]

[dev-dependencies]
merkle_light_derive = { path = "../merkle_derive" }

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"
