[package]
name = "merkle_light"
version = "0.1.0"
authors = [
  "Ivan Prisyazhnyy <john.koepi@gmail.com>"
]

description   = "Light merkle tree implementation with SPV support and dependency agnostic."
license       = "BSD-3-Clause"
homepage      = "https://github.com/sitano/merkle_light"
repository    = "https://github.com/sitano/merkle_light"
documentation = "https://sitano.github.io/merkle_light/merkle_light/index.html"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]

[dependencies]

ring = { version = "^0.12.1", optional = true }
rust-crypto = { version = "^0.2.36", optional = true }

[dev-dependencies]

[features]
default = []
bitcoin = ["ring", "rust-crypto"]

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"
