[package]
name = "merkletree"
version = "0.7.1"
authors = [
  "Ivan Prisyazhnyy <john.koepi@gmail.com>"
]

description   = "Light merkle tree implementation with SPV support and dependency agnostic."
license       = "BSD-3-Clause"
homepage      = "https://github.com/filecoin-project/merkle_light"
repository    = "https://github.com/filecoin-project/merkle_light"
documentation = "https://docs.rs/merkletree"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]

[package.metadata.release]
pre-release-commit-message = "chore(release): release {{version}}"
pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"

[dependencies]
rayon = "1.0.0"
memmap = "0.7"
ring = { version = "^0.14.1", optional = true }
rust-crypto = { version = "^0.2.36", optional = true }
rand = { version = "^0.3", optional = true }
arrayref = "0.3.5"
tempfile = "3.0.7"
positioned-io = "0.2"

[dev-dependencies]
byteorder = "1.3.1"

[features]
default = []
bitcoin = ["ring", "rust-crypto"]
chaincore = ["rust-crypto"]
crypto_bench = ["rust-crypto", "ring", "rand"]
