[package]
name = "merkle_light_derive"
version = "0.1.0"
authors = [
  "Ivan Prisyazhnyy <john.koepi@gmail.com>"
]

description   = "#[derive(Hashable)] for light merkle tree Hashable"
license       = "BSD-3-Clause"
homepage      = "https://github.com/sitano/merkle_light"
repository    = "https://github.com/sitano/merkle_light"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]

[lib]
name = "merkle_light_derive"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
merkle_light = { path = "../merkle", version = "0.1.0" }

