[package]
name = "merkle_light_derive"
version = "0.4.0"
authors = [
  "Ivan Prisyazhnyy <john.koepi@gmail.com>"
]
edition = "2021"

description   = "#[derive(Hashable)] for light merkle tree Hashable"
license       = "BSD-3-Clause"
homepage      = "https://github.com/sitano/merkle_light"
repository    = "https://github.com/sitano/merkle_light"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]

[lib]
name = "merkle_light_derive"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
merkle_light = { path = "../merkle", version = "^0.4" }

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"

